welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:4: error: type mismatch;
 found   : Boolean(false)
 required: Int
	false
        ^